syntax = "proto3";
package Boot;

option go_package = "github.com/ViktorEmil2000/CatanEnjoyers-Mandatory-activity-4/Boot";

service Boot{
    rpc BootstrapConnect (stream ClientToBoot) returns (stream BootToClient){}
}


message ClientToBoot {
    int64 id = 1;
    string port = 2;
}

message BootToClient {
    int64 id = 1;
    string port = 2;
}