syntax = "proto3";
package P2P;

option go_package = "./proto";

service P2P{
    rpc BootstrapConnect (stream BootClient) returns (stream BootServer){}
}


message BootClient {
    string id = 1;
    string port = 2;
}

message BootServer {
    string id = 1;
    string port = 2;
}